<resources>
    <string name="app_name">BlaBlaTrip</string>

    <!-- INICIO -->
    <string name="bt_valoracion_text">Valoración</string>
    <string name="bt_traductor_text">Traductor</string>
    <string name="bt_inglaterra_text">Inglaterra</string>
    <string name="bt_italia_text">Italia</string>
    <string name="bt_francia_text">Francia</string>
    <string name="bt_alemania_text">Alemania</string>
    <string name="bt_portugal_text">Portugal</string>
    <string name="elige_pais_label">ELIJA PAÍS</string>
    <string name="connected">CONECTADO A INTERNET</string>
    <string name="noconnected">SIN CONEXIÓN A INTERNET</string>

    <!-- TRADUCTOR -->
    <string name="title_activity_traductor">TRADUCTOR</string>

    <!-- VALORAION -->
    <string name="title_activity_valoracion">VALORACIÓN</string>
    <string name="elegirPais_label">Elija país a valorar o la app en su conjunto:</string>
    <string name="valoracion_label">Escriba su valoración: </string>
    <string name="bt_enviarValoracion">Enviar valoración</string>
    <string name="toast_error">NO HA SELECCIONADO NINGUNA OPCIÓN O NO SE HA ESCRITO NADA</string>

    <!-- PAIS -->
    <string name="title_activity_pais">PAÍS</string>
    <string name="bt_evaluacion">Evaluación</string>
    <string name="bt_expresiones">Expresiones</string>
    <string name="bt_descarga">Descargar</string>
    <string name="descargado">La descarga ha finalizado</string>

    <!-- EXPRESIONES -->
    <string name="title_activity_expresiones">EXPRESIONES</string>
    <string name="bt_basicas">Básicas</string>
    <string name="bt_salud">Salud</string>
    <string name="bt_compras">Compras</string>
    <string name="bt_comer">Salir a comer</string>
    <string name="bt_hospedaje">Hospedaje</string>
    <string name="bt_viajar">Viajar</string>
    <string name="bt_quejas">Quejas</string>
    <string name="bt_coqueteo">Coqueteo</string>
    <string name="bt_numeros">Números</string>
    <!-- TABLA -->
    <string name="table">TABLA EXPRESIONES</string>
    <string name="cabeceraSpanish">Castellano</string>
    <string name="cabeceraIdioma"></string>
    <string name="cabeceraAudio">Audio</string>

    <!-- TEST -->
    <string name="title_activity_test">TEST</string>
    <string name="bt_send">Aceptar</string>
    <string name="bt_next">Siguiente</string>
    <string name="bt_start">Comenzar</string>
    <string name="bt_finish">Salir</string>
    <string name="toast_fallar">¡¡¡ INCORRECTO !!!</string>
    <string name="toast_aceptar">¡¡¡ CORRECTO !!!</string>
    <string name="toast_norespuesta">No has seleccionado ninguna opción</string>
    <string name="resultado">El resultado es: </string>
    <string name="start">Vas a iniciar el test </string>
    <string name="fraseFinal">Se ha acabado el test. El resultado es: </string>


</resources>
