<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/relativeLayout_inicio"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.tta.blablatrip.view.InicioActivity">
    <!--android:background="@drawable/europa"> -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:id="@+id/linearLayout_inicio">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elige_pais_label"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/bt_alemania"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_alemania_text"
            android:textColor="@color/white"
            android:onClick="alemania"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/bt_francia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_francia_text"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:onClick="francia"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/bt_inglaterra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_inglaterra_text"
            android:textColor="@color/white"
            android:onClick="inglaterra"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/bt_italia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_italia_text"
            android:textColor="@color/white"
            android:onClick="italia"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/bt_portugal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_portugal_text"
            android:textColor="@color/white"
            android:onClick="portugal"/>

    </LinearLayout>


    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/bt_traductor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_traductor_text"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:onClick="traductor"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/bt_valoracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_valoracion_text"
        android:layout_alignTop="@+id/bt_traductor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"
        android:onClick="valoracion"/>

</RelativeLayout>
