<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="es.tta.blablatrip.view.TestActivity"
    android:orientation="vertical"
    android:id="@+id/test_layout">

    <TextView
        android:id="@+id/inicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/start"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"/>

    <Button
        android:id="@+id/button_start_test"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_start"
        android:onClick="teses"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/pregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="20dp"
        android:layout_alignParentTop="true"/>

    <RadioGroup
        android:id="@+id/respuesta"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/pregunta">

    </RadioGroup>

    <Button
        android:id="@+id/button_send_test"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_send"
        android:onClick="comprobar"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/button_next_test"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_next"
        android:onClick="teses"
        android:layout_centerVertical="true"/>/>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/finalizar"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/start"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"/>

    <Button
        android:id="@+id/button_finish_test"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_finish"
        android:onClick="salir"
        android:layout_centerVertical="true"/>

</RelativeLayout>